--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,19 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.3
+django-filter==2.4.0
 djangorestframework==3.12.2
+drf-writable-nested==0.6.2
 html5lib==1.0.1
 idna==2.8
+importlib-metadata==2.0.0
 ipaddr==2.2.0
 lockfile==0.12.2
 msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
 progress==1.5
-psycopg2==2.8.3 --no-binary psycopg2
+psycopg2==2.8.3
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.4
@@ -25,6 +28,7 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.25.8
 webencodings==0.5.1
-
+zipp==3.4.0
